--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 _*
 *~
 .#*
+.goreleaser.yml
 \#*
 bin
+dist
+release
 examples/javacrudlimpl/generated
 sadl_darwin_amd64.zip
 sadl_darwin_arm64.zip
